cluster/networking/etcd.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd
  namespace: kube-system
  labels:
    app: etcd
spec:
  ports:
  - port: 2379
    name: client
  - port: 2380
    name: peer
  clusterIP: None
  selector:
    app: etcd
---
apiVersion: v1
kind: Service
metadata:
  name: etcd-client
  namespace: kube-system
  labels:
    app: etcd
spec:
  ports:
  - port: 2379
    name: client
  clusterIP: 10.96.0.20
  selector:
    app: etcd
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: etcd
  namespace: kube-system
  labels:
    app: etcd
spec:
  serviceName: "etcd"
  replicas: 1
  selector:
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
    spec:
      nodeSelector:
        kubernetes.io/hostname: talos-nst-2ck
      containers:
      - name: etcd
        image: registry.k8s.io/etcd:3.5.6-0
        command:
        - /usr/local/bin/etcd
        - --listen-client-urls=http://0.0.0.0:2379
        - --advertise-client-urls=http://etcd.kube-system.svc.cluster.local:2379
        - --listen-peer-urls=http://0.0.0.0:2380
        - --initial-advertise-peer-urls=http://etcd.kube-system.svc.cluster.local:2380
        - --initial-cluster=default=http://etcd.kube-system.svc.cluster.local:2380
        - --initial-cluster-token=etcd-cluster-1
        - --initial-cluster-state=new
        ports:
        - containerPort: 2379
          name: client
        - containerPort: 2380
          name: peer
