cluster/networking/pihole.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole-system
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 53
          name: dns
          protocol: UDP
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 80
          name: web
          protocol: TCP
        volumeMounts:
        - name: pihole-etc
          mountPath: /etc/pihole
        - name: pihole-dnsmasq
          mountPath: /etc/dnsmasq.d
        - name: custom-dns
          mountPath: /etc/dnsmasq.d/99-k8s-cluster.conf
          subPath: 99-k8s-cluster.conf
      volumes:
      - name: pihole-etc
        emptyDir: {}
      - name: pihole-dnsmasq
        emptyDir: {}
      - name: custom-dns
        configMap:
          name: pihole-custom-dns
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole-system
  annotations:
    metallb.io/allow-shared-ip: "pihole-svc"
spec:
  selector:
    app: pihole
  type: LoadBalancer
  loadBalancerIP: 10.0.0.54
  ports:
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  - port: 80
    targetPort: 80
    protocol: TCP
    name: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: pihole-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: 10.0.0.53
spec:
  ingressClassName: nginx
  rules:
  - host: pihole-k8s.eduuh.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole
            port:
              name: web
  tls:
  - hosts:
    - pihole-k8s.eduuh.home
    secretName: pihole-k8s-tls
